--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,26 @@ android {
         }
     }
 }
+repositories {
+    google()
+    mavenLocal()
+    maven {
+        // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+        url("$rootDir/../node_modules/react-native/android")
+    }
+    maven { url "https://jitpack.io" }
+    maven { url 'https://developer.huawei.com/repo/' }
+    maven {
+        credentials {
+            username 'sdk'
+            password 'sdk123456'
+        }
+        url 'https://www.valifystage.com/artifactory/libs-release/'
+    }
+    mavenCentral()
+    jcenter()
+}
+
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
