--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,6 +10,17 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+
+
+        maven { url "https://jitpack.io" }
+        maven { url 'https://developer.huawei.com/repo/' }
+        maven {
+            credentials {
+                username 'sdk'
+                password 'sdk123456'
+            }
+            url 'https://www.valifystage.com/artifactory/libs-release/'
+        }
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
