--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@valifysolutions/react-native-vidvocr": "^2.1.0",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.3"
   },
