--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "@valifysolutions/react-native-vidvocr": "^2.1.0",
     "axios": "^1.7.7",
     "react": "18.3.1",
